2023-08-27T16:17:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5991981466 # 1155
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
* notice: last 14d: unq all: 12 31
* notice: prev accum: outdated-unq outdated-all / unq all: 453 783 / 478 816
* notice: next accum: outdated-unq outdated-all / unq all: 454 785 / 478 816
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-13] / []

2023-08-27T01:10:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5988022568 # 1153
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
* notice: last 14d: unq all: 12 32
* notice: prev accum: outdated-unq outdated-all / unq all: 453 783 / 477 815
* notice: next accum: outdated-unq outdated-all / unq all: 453 783 / 478 816
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-13 2023-08-27]

2023-08-26T16:17:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5985795406 # 1152
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-26
* notice: last 14d: unq all: 12 32
* notice: prev accum: outdated-unq outdated-all / unq all: 452 781 / 477 815
* notice: next accum: outdated-unq outdated-all / unq all: 453 783 / 477 815
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-12] / []

2023-08-25T16:19:33Z: