@@ -1,12 +1,7 @@
 {
-  "count": 31,
+  "count": 29,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2023-08-14T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-15T00:00:00Z",
       "count": 2,
